Hydration model, and improved rswag specs.
This commit introduces Hydration model as well as some
improvements in rswag specs.
I added example to POST endpoint for days controller, when create method succeeds.
Root path now routes correctly to "api/v1/days#index".
