# db/schema.rb
@@ -10,7 +10,7 @@
 #
 # It's strongly recommended that you check this file into your version control system.
 
-ActiveRecord::Schema[7.0].define(version: 2023_03_28_185335) do
+ActiveRecord::Schema[7.0].define(version: 2023_03_28_200722) do
   # These are extensions that must be enabled in order to support this database
   enable_extension "plpgsql"
 
@@ -24,6 +24,12 @@ ActiveRecord::Schema[7.0].define(version: 2023_03_28_185335) do
 
   create_table "days", force: :cascade do |t|
     t.datetime "date"
+    t.datetime "created_at", null: false
+    t.datetime "updated_at", null: false
+  end
+
+  create_table "hydrations", force: :cascade do |t|
+    t.integer "cups"
     t.datetime "created_at", null: false
     t.datetime "updated_at", null: false
   end
